# MethylLlama

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_minimal.txt  requirements_tutorials.txt
bmfm_methylation/: __init__.py
bmfm_methylation/llama/: __init__.py  finetune_llama.py  model.py  pretrain_llama.py  scale_adapt.py  wced_llama.py
bmfm_methylation/mlm/: __init__.py  finetune_lora_mlm.py  finetune_lora_twostage_mlm.py  finetune_mlm.py  lightning_module.py  lora.py  model.py
bmfm_methylation/shared/: __init__.py  config.py  data_module.py  dataset.py  tokenizer.py
bmfm_methylation/wced/: __init__.py  finetune_wced.py  pretrain_wced.py  wced_module.py
data_prep/: extract_demo_samples.py  install_minfi.R  merge_multitask_data.py  merge_smoking_datasets.py  prepare_geo_smoking.py  prepare_gse42861.py  run_extract_demo_samples.sh  run_merge_multitask.sh  run_prepare_gse42861.sh  run_prepare_smoking.sh  run_remerge_smoking.sh
docs/: BMFM_Methylation_Adaptation_Presentation.md  BMFM_vs_MethylGPT_Comparison.html  BMFM_vs_MethylGPT_Comparison.md  COMPARISON_PRESENTATION.html  MLM_BMFM_Methylation_Adaptation_Presentation.html  MethylLlama_Architecture_Presentation.html  MethylLlama_Architecture_Presentation.md  RESULTS_SUMMARY.md  WCED_BMFM_Methylation_Adaptation_Presentation.html  methylation_age_report.tex
docs/presentations/: BMFM_DNA_MethylLlama_Presentation.html  MethylLlama_DataAnalysis.html  (+9 more)
scripts/: download_checkpoint.sh
tutorials/: age_prediction.ipynb  embedding_analysis.ipynb  quickstart.ipynb
(+153 files in other folders)
