[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bmfm_methylation"
version = "0.1.0"
description = "MethylLlama: DNA Methylation Age Prediction with WCED Pretraining"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["bmfm_methylation*"]
